Providing Section About Me

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Enrique Companioni Portfolio</strong></a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://github.com/EnriqManComp" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon brands fa-kaggle"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
@@ -38,9 +36,14 @@
 										<header>
 											<h1>Hi, I’m Enrique Companioni<br />
 											</h1>
-											<p>Data Scientist | Data Analysis | AI | Machine Learning</p>
+											<p> Data Scientist | Machine Learning | Databases | AI  </p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p><b>About Me:</b></p>
+										<p>
+											B.S Telecommunication and Electronics Engineering
+										 	<br>Currently pursuing a M.S in Computer Science
+											<br>Passion for working with data and building AI models to solve real-world problems
+										</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
@@ -56,31 +59,32 @@
 										<h2>Skills</h2>
 									</header>
 									<div class="features">
-										<article>
-											<img src="images/deep-learning.png" width="80" height="80" style="margin-right: 20px;"></img>
-											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
+								
 										<article>
 											<img src="images/python-logo-only.png" width="80" height="80" style="margin-right: 20px;"></img>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
+												<h3>Python</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
 										<article>
 											<img src="images/Data Analysis.gif" width="80" height="80" style="margin-right: 20px;"></img>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
+												<h3>Data Analysis</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-signal"></span>
+											<img src="images/database-settings.png" width="80" height="80" style="margin-right: 20px;"></img>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
+												<h3>Database managment</h3>
+												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											</div>
+										</article>
+										<article>
+											<img src="images/deep-learning.png" width="80" height="80" style="margin-right: 20px;"></img>
+											<div class="content">
+												<h3>Deep Learning</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
