Ending Section Skills

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 										</header>
 										<p><b>About Me:</b></p>
 										<p>
-											<>
-											B.S Telecommunication and Electronics Engineering
-										 	<br>Currently pursuing a M.S in Computer Science
-											<br>Passion for working with data and building AI models to solve real-world problems
+											<ul>
+												<li>B.S Telecommunication and Electronics Engineering</li>
+												<li>Currently pursuing a M.S in Computer Science</li>
+												<li>Passion for working with data and building AI models to solve real-world problems</li>
+												<li>Previous experience in Software Development, Data Analysis, and Database Administration</li>
+											</ul>
 										</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
@@ -65,28 +67,42 @@
 											<img src="images/python-logo-only.png" width="80" height="80" style="margin-right: 20px;"></img>
 											<div class="content">
 												<h3>Python</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Development with Python since 2017.</p>
 											</div>
 										</article>
 										<article>
 											<img src="images/Data Analysis.gif" width="80" height="80" style="margin-right: 20px;"></img>
 											<div class="content">
 												<h3>Data Analysis</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Transforming raw data into meaningful insights since 2021.</p>
 											</div>
 										</article>
 										<article>
 											<img src="images/database-settings.png" width="80" height="80" style="margin-right: 20px;"></img>
 											<div class="content">
-												<h3>Database managment</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Database Management</h3>
+												<p>Proficient with SQL databases since 2021 and NoSQL since 2023.</p>
 											</div>
 										</article>
 										<article>
 											<img src="images/deep-learning.png" width="80" height="80" style="margin-right: 20px;"></img>
 											<div class="content">
-												<h3>Deep Learning</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Machine Learning</h3>
+												<p>Building machine learning models and applications to address real-world problems since 2023.</p>
+											</div>
+										</article>
+										<article>
+											<img src="images/quantum-computer.png" width="80" height="80" style="margin-right: 20px;"></img>
+											<div class="content">
+												<h3>Computer Science</h3>
+												<p>Leveraging core computer science principles to enhance development efficiency and scalability since 2023.</p>
+											</div>
+										</article>
+										<article>
+											<img src="images/tableau.png" width="80" height="80" style="margin-right: 20px;"></img>
+											<div class="content">
+												<h3>Tableau</h3>
+												<p>Creating dynamic dashboards and data visualizations to enhance decision-making processes since 2023.</p>
 											</div>
 										</article>
 									</div>
