Adding contact links

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 									<a href="index.html" class="logo"><strong>Enrique Companioni Portfolio</strong></a>
 									<ul class="icons">
 										<li><a href="https://github.com/EnriqManComp" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<li><a href="#" class="icon brands fa-kaggle"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://www.linkedin.com/in/enrique-companioni/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										<li><a href="https://www.kaggle.com/enriquecompanioni" class="icon brands fa-kaggle"><span class="label">Snapchat</span></a></li>
+										<li><a href="https://medium.com/@companioni" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
