--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 										<header>
 											<h1>Hi, I’m Enrique Companioni<br />
 											</h1>
-											<p> Data Scientist | Machine Learning | Databases | AI  </p>
+											<p> Data Scientist | Machine Learning | Database Management | AI  </p>
 										</header>
 										<p><b>About Me:</b></p>
 										<p>
