--- a/index.html
+++ b/index.html
@@ -229,13 +229,6 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -243,8 +236,9 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="blog.html">Blog</a></li>
+										<li><a href="projects.html">More Projects</a></li>
+										<!---
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
@@ -268,10 +262,12 @@
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="#">Amet Lacinia</a></li>
+										--->
 									</ul>
 								</nav>
 
 							<!-- Section -->
+								<!---
 								<section>
 									<header class="major">
 										<h2>Ante interdum</h2>
@@ -294,24 +290,25 @@
 										<li><a href="#" class="button">More</a></li>
 									</ul>
 								</section>
+								--->
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<!---<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>--->
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="mailto:enriquecompanionidev@gmail.com">enriquecompanionidev@gmail.com</a></li>
+										<li class="icon solid fa-phone">(786) 851-3973</li>
+										<li class="icon solid fa-home">Miami, Florida<br />
+										</li>
 									</ul>
 								</section>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; Enrique Companioni</p>
 								</footer>
 
 						</div>
