Adding new projects

--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
 												<li><a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning/blob/c25976e381fdfa7be844991908a6d7ad93ac4e41/efficient-automation-of-recipe-selection.ipynb" class="button">More</a></li>
 											</ul>
 										</article>
+
+										<article>
+											<a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning/blob/c25976e381fdfa7be844991908a6d7ad93ac4e41/efficient-automation-of-recipe-selection.ipynb" class="image"><img src="images/projects/LAPD Crime Data Analysis.webp" alt="Recipe_Website" height="200" width="150" /></a>
+											<h3>Los Angeles Crime Analysis </h3>
+											<p> Data Analysis | Data Visualization | SQL | Tableau  </p>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning/blob/c25976e381fdfa7be844991908a6d7ad93ac4e41/efficient-automation-of-recipe-selection.ipynb" class="button">More</a></li>
+											</ul>
+										</article>
 										
 										 	<!--Satelital Imagery and ML-->
 										<article>
@@ -146,6 +156,16 @@
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 												<ul class="actions">
 													<li><a href="#" class="button">More</a></li>
+												</ul>
+											</article>
+
+											<article>
+												<a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning/blob/c25976e381fdfa7be844991908a6d7ad93ac4e41/efficient-automation-of-recipe-selection.ipynb" class="image"><img src="images/projects/Generating Training Data with GEE and Python.webp" alt="Recipe_Website" height="200" width="150" /></a>
+												<h3> Generating Training Data with Google Earth Engine and Python</h3>
+												<p>Data Science | Problem Solving | SQL </p>
+												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<ul class="actions">
+													<li><a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning/blob/c25976e381fdfa7be844991908a6d7ad93ac4e41/efficient-automation-of-recipe-selection.ipynb" class="button">More</a></li>
 												</ul>
 											</article>
 																	
