Modifying about me and skills highlight

--- a/index.html
+++ b/index.html
@@ -37,15 +37,20 @@
 										<header>
 											<h1>Hi, I’m Enrique Companioni<br />
 											</h1>
-											<p> Data Scientist | Data Engineer | Machine Learning | Database Management | AI  </p>
+											<p> Data Engineering & Analytics | Big Data, Database Design, and Predictive Modeling  </p>
 										</header>
 										<p><b>About Me:</b></p>
 										<p>
 											<ul>
-												<li>Currently pursuing a M.S in Computer Science</li>
-												<li>B.S in Telecommunication and Electronics Engineering</li>
-												<li>Passion for working with data and building AI models to solve real-world problems</li>
-												<li>Previous experience in Software Development, Data Analysis, and Database Administration</li>
+												<li>Currently pursuing an M.S. in Computer Science</li>
+												<li>B.S. in Telecommunication and Electronics Engineering</li>
+												<li>Passionate about working with big data, building data pipelines, and developing machine learning models to solve real-world problems</li>
+												<li><ul>Previous experience in:
+													<li>Software Development</li>
+													<li>Analysis</li>
+													<li>Database Administration</li>
+												</li>
+												<li>Interested in scalable systems, data modeling, and end-to-end data solutions</li>
 											</ul>
 										</p>
 										<ul class="actions">
@@ -115,9 +120,9 @@
 										<h2>Main Projects</h2>
 									</header>
 									<div class="posts">
-										
-										<!-- AI Real-World Problem Solving -->
-											<!-- Data Science -->
+
+										<!-- E2E Data Engineering Projects (Kafka, Airflow, Spark, Database, Python) -->
+																					
 										<article>
 											<a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning/blob/c25976e381fdfa7be844991908a6d7ad93ac4e41/efficient-automation-of-recipe-selection.ipynb" class="image"><img src="images/Recipe_Website_Image.png" alt="Recipe_Website" height="200" width="150" /></a>
 											<h3>High Traffic Classification of a Recipe Website </h3>
