--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,20 @@
 
 								<section>
 
+									<!-- Spark Projects -->
+
+									<!-- dbt Projects -->
+										
+									<!-- SQL Projects (PostgreSQL, SQL Server) -->
+
+									<!-- NoSQL Projects -->
+
+									<!-- Airflow Projects -->
+
+									<!-- Kafka Projects -->
+
+									<!-- Python Projects -->
+
 									<table class="table">
 										<thead>
 											<tr>
