--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 												<li>Passionate about working with big data, building end-to-end data solutions, and developing machine learning models to solve real-world problems</li>
 												<li><ul>Previous experience in:
 													<li>Software Development</li>
-													<li>Analysis</li>
+													<li>Data Analysis</li>
 													<li>Database Administration</li>
 												</li></ul>
 												
