Update homepage, add more about me page

--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,38 @@
 												</a>
 											</td>							
 											</tr>
+
+											<tr class="py-1">
+											<td>High Traffic Classification of a Recipe Website</td>
+											<td>Data Science | Data Analysis | Classification Problem</td>
+											<td>
+												<a
+												href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning/blob/c25976e381fdfa7be844991908a6d7ad93ac4e41/efficient-automation-of-recipe-selection.ipynb"
+												target="_blank"
+												>
+												<img
+													src="https://img.shields.io/badge/GitHub-Repo-blue.svg"
+													alt="GitHub Repo - High Traffic Classification of a Recipe Website"
+												/>
+												</a>
+											</td>							
+											</tr>
+
+											<tr class="py-1">
+											<td>Autonomous Path Pilot</td>
+											<td>Computer Vision | Robotics | Problem Solving</td>
+											<td>
+												<a
+												href="https://github.com/EnriqManComp/Autonomous-Path-Pilot-ROS-turtlebot3.git"
+												target="_blank"
+												>
+												<img
+													src="https://img.shields.io/badge/GitHub-Repo-blue.svg"
+													alt="GitHub Repo - Autonomous Path Pilot"
+												/>
+												</a>
+											</td>							
+											</tr>
 								
 											<!-- Nutrition Facts Competition -->
 											<tr class="py-1">
