--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 										</p>
 										<ul class="actions">
 											<li><a href="more_about_me.html" class="button big"> More About Me </a></li>
+											<li><a href="#" class="button big"> Experience </a></li>
 											<li><a href="#" class="button big"> CV </a></li>
 										</ul>
 									</div>
@@ -305,6 +306,7 @@
 										<li><a href="more_about_me.html">About Me</a></li>
 										<!-- <li><a href="blog.html">Blog</a></li> -->
 										<li><a href="projects.html">More Projects</a></li>
+										<li><a href="education.html">Education</a></li>
 										
 									</ul>
 								</nav>
