--- a/education.html
+++ b/education.html
@@ -104,7 +104,8 @@
 									</header>
 									<ul>
 										<li><a href="more_about_me.html">About Me</a></li>
-										<!-- <li><a href="blog.html">Blog</a></li> -->
+										<li><a href="education.html"> Education </a></li>
+										<li><a href="experience.html"> Experience </a></li>
 										<li><a href="projects.html">More Projects</a></li>
 										
 									</ul>
