Update more project section

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
 												<a href="https://github.com/EnriqManComp/LA_crime_project" class="image"><img src="images/projects/LAPD Crime Data Analysis.webp" alt="LAPD Crime Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Los Angeles Crime Analysis</h3>
-												<p><strong>Stack:</strong> SQL · Tableau · Python · Data Engineering</p>
-												<p>End-to-end analysis of LAPD crime records to detect hotspots, temporal trends and support interactive dashboards for law enforcement insights.</p>
+												<p><strong>Skills:</strong> Data Analysis · SQL · Tableau · Python </p>
+												<p> With this project, we seek to identify trends, patterns, and high-risk areas to enhance law enforcement strategies, improve public safety measures, and provide comparative analyses of crime trends in other cities. </p>
 												<ul class="actions">
-													<li><a href="https://github.com/EnriqManComp/LA_crime_project" class="button">Project</a></li>
+													<li><a href="https://github.com/EnriqManComp/LA_crime_project" class="button"> Details </a></li>
 													<li><a href="https://public.tableau.com/app/profile/enrique.manuel.companioni.valle/viz/TrackingBoardofCrimeRecords2010-2019/TrackingBoardofCrimeRecords" class="button">Dashboard</a></li>
 												</ul>
 											</article>
@@ -96,14 +96,19 @@
 
 										<td style="vertical-align:top; padding:12px; width:50%;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://github.com/EnriqManComp/Mango-Leaf-Disease-Classification/blob/1e17041902e85e8a454297fc6524ce8336928ad4/mango-leaf-disease-classification.ipynb" class="image"><img src="images/projects/Mango leaf Disease.png" alt="Mango Leaf Disease" style="width:100%; height:200px; object-fit:cover;" /></a>
-												<h3>Mango Leaf Disease Classification</h3>
-												<p><strong>Stack:</strong> CNN · Transfer Learning · Grad-CAM · OpenCV</p>
-												<p>Multiclass disease classifier for mango leaves using CNNs, explainability (Grad-CAM) and feature extraction techniques to support agricultural diagnostics.</p>
+												<a href="https://github.com/EnriqManComp/real-estate-data-warehouse.git" class="image"><img src="images/projects/real-estate-data-warehouse.png" alt="Real Estate Data Warehouse" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<h3>Real Estate Data Warehouse & ETL</h3>
+												<p><strong>Skills:</strong> Data Engineering · SQL · Airflow · Python · Power BI </p>
+												<p style="text-align:justify;">
+													Designed and implemented a data warehouse for real estate sales, 
+													including schema design, API integration, data preprocessing, and SQL-based transformations.
+													Implemented SCD Type 1 and 2 for historical tracking,
+													data quality checks, and pipeline monitoring with Flower API.
+													Built a Data Engineering dashboard to track pipeline reliability and performance.</p>
 												<ul class="actions">
-													<li><a href="https://github.com/EnriqManComp/Mango-Leaf-Disease-Classification/blob/1e17041902e85e8a454297fc6524ce8336928ad4/mango-leaf-disease-classification.ipynb" class="button">Notebook</a></li>
+													<li><a href="https://github.com/EnriqManComp/real-estate-data-warehouse.git" class="button"> Details </a></li>
 												</ul>
-											</article>
+											</article>											
 										</td>
 									</tr>
 
@@ -112,56 +117,48 @@
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
 												<a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="image"><img src="images/dog breed classification.jpg" alt="Dog Breed Classification" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Dog Breed Classification (ResNet · InceptionV3)</h3>
-												<p><strong>Stack:</strong> Transfer Learning · PyTorch/TensorFlow · Image Augmentation</p>
+												<p><strong>Skills:</strong> Transfer Learning · PyTorch · Machine Learning </p>
 												<p>Hybrid approach using pretrained architectures to extract robust features and build a high-performing breed classifier — includes experimentation notebooks and model comparison.</p>
 												<ul class="actions">
-													<li><a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="button">Notebook</a></li>
+													<li><a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="button">Details</a></li>
 												</ul>
 											</article>
 										</td>
 
 										<td style="vertical-align:top; padding:12px;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="#" class="image"><img src="images/projects/real-estate-data-warehouse.png" alt="Real Estate Data Warehouse" style="width:100%; height:200px; object-fit:cover;" /></a>
-												<h3>Real Estate Data Warehouse & ETL</h3>
-												<p><strong>Stack:</strong> Postgres / Redshift · Airflow · Python ETL</p>
-												<p>Design and implementation of a data warehouse for real-estate sales (raw -> staging -> analytics). Includes schema design, ingestion pipelines and data quality checks.</p>
+												<a href="https://www.kaggle.com/code/enriquecompanioni/mango-leaf-disease-classification" class="image"><img src="images/projects/Mango leaf Disease.png" alt="Mango Leaf Disease" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<h3>Mango Leaf Disease Classification</h3>
+												<p><strong>Skills:</strong> CNN · Grad-CAM · OpenCV </p>
+												<p>Multiclass disease classifier for mango leaves using CNNs, explainability (Grad-CAM) and feature extraction techniques to support agricultural diagnostics.</p>
 												<ul class="actions">
-													<li><a href="#" class="button">Project</a></li>
+													<li><a href="https://www.kaggle.com/code/enriquecompanioni/mango-leaf-disease-classification" class="button">Details</a></li>
 												</ul>
-											</article>
+											</article>											
 										</td>
 									</tr>
 
 									<tr style="background-color:white; border: none;">
 										<td style="vertical-align:top; padding:12px;">
 											<article>
-												<a href="#" class="image"><img src="images/projects/pursuit_evasion.png" alt="Pursuit-Evasion RL" style="width:100%; max-width:320px; height:auto;" /></a>
-												<h3>Pursuit–Evasion (Reinforcement Learning Thesis)</h3>
-												<p><strong>Stack:</strong> PPO · PyTorch · Pygame · Multi-agent RL</p>
-												<p>Master's thesis project: simulation environment in Pygame and training multi-agent policies with PPO to study pursuit–evasion strategies and agent coordination.</p>
+												<a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="image"><img src="images/projects/Recipe_Website_Image.png" alt="Recipe Website Project" style="width:100%; height:auto;" /></a>
+												<h3>Efficient Automation of Recipe Selection Boosting Traffic with Machine-Learning</h3>
+												<p><strong>Skills:</strong> Data Analysis · Data Science · Classification · Data Visualization </p>
+												<p>This project automates the recipe selection process to increase traffic on a fictional recipe website by implementing a machine learning solution.</p>
 												<ul class="actions">
-													<li><a href="#" class="button">Repository</a></li>
+													<li><a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="button">Details</a></li>
 												</ul>
 											</article>
 										</td>
 
 										<td style="vertical-align:top; padding:12px;">
-											<article>
-												<a href="#" class="image"><img src="images/projects/bank_deposit.png" alt="Bank Term Deposit Prediction" style="width:100%; max-width:320px; height:auto;" /></a>
-												<h3>Bank Term Deposit Subscription Prediction</h3>
-												<p><strong>Stack:</strong> Feature Engineering · XGBoost · Model Evaluation</p>
-												<p>Kaggle-style project predicting bank term deposit subscription — focuses on feature engineering, model selection and business-focused evaluation metrics.</p>
-												<ul class="actions">
-													<li><a href="#" class="button">More</a></li>
-												</ul>
-											</article>
+											
 										</td>
 									</tr>
 								</table>
 							
 							<div style="text-align: center;">
-								<a href="#" class="button big"> More Projects </a>
+								<a href="projects.html" class="button big"> More Projects </a>
 							</div>
 							</section>
 
@@ -187,7 +184,7 @@
 															onmouseout="this.style.transform='scale(1)'">
 													</div>
 													<div style="text-align: center;">
-														<img src="images/skills/postgres.png" width="40" height="40" alt="Postgres / SQL" title="Postgres / SQL" 
+														<img src="images/skills/sql-server.png" width="40" height="40" alt="SQL" title="SQL" 
 															style="transition: transform 0.2s ease-in-out;"
 															onmouseover="this.style.transform='scale(1.2)'"
 															onmouseout="this.style.transform='scale(1)'">
